--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -22,6 +22,9 @@
     justify-content: center;
     text-decoration: none;
     color: #fff;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 24px;
     & img {
       margin-right: 12px;
     }
@@ -33,13 +36,17 @@
       margin-right: 14px;
     }
   }
+  &-contacts {
+    padding-left: 16px;
+  }
 }
 
 .logo {
   margin-right: 48px;
   width: 100%;
   & img {
-    width: 100%;
+    max-width: 100%;
+    width: 95%;
   }
 }
 
@@ -48,7 +55,7 @@
     margin-left: 24px;
   }
   &-ok {
-    margin-left: 4px;
+    margin-left: 8px;
   }
   &-eye {
     margin-right: 9px;
@@ -56,7 +63,7 @@
   &-search {
     position: absolute;
     right: 22px;
-    top: 1px;
+    top: -2px;
     cursor: pointer;
     transition: .3s;
     &:hover {
@@ -75,7 +82,7 @@
   margin-right: 12px;
   margin-bottom: 8px;
   & span {
-    border-bottom: 1px solid #696F75;
+    border-bottom: 1px dotted #696F75;
   }
   & .img-w {
     display: none;
