--- a/scss/_supermenu.scss
+++ b/scss/_supermenu.scss
@@ -64,7 +64,7 @@
     margin-bottom: 8px;
   }
   &-sub {
-    margin-bottom: 64px;
+    margin-bottom: 4%;
     &__item {
       font-size: 15px;
       line-height: 24px;      
