--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -22,6 +22,10 @@
 
 
 @media screen and (max-width: 769px) {
+  #wrap {
+    width: 91%;
+    margin: auto;
+  }
   .menu {
     & li {
       margin-right: 7%;
@@ -37,6 +41,11 @@
     }
   }
   .p-0 > .callback {
+    display: none;
+  }
+}
+@media screen and (max-width: 570px) {
+  .content-img {
     display: none;
   }
 }
